--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.9
-  - type: static
+  - type: static_site
     name: frontend
     buildCommand: "npm install --prefix frontend && npm run build --prefix frontend"
     staticPublishPath: "frontend/build"
