--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,8 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.9
-  - type: static_site
+  - type: web
     name: frontend
+    runtime: node
     buildCommand: "npm install --prefix frontend && npm run build --prefix frontend"
-    staticPublishPath: "frontend/build"
+    startCommand: "npx serve -s frontend/build"
